# gcp-cloud-logging-handler

./: .dockerignore  CHANGELOG.md  Dockerfile  Pipfile  README.md  deploy.sh  env.yaml  main.py  pyproject.toml
cloud_logging_handler/: __init__.py  error_handler.py  handler.py
examples/: fastapi_app.py
src/: cloud_logging_handler.py  context_request.py  error_handler.py
tests/: test_error_handler.py  test_handler.py  test_integration.py
